TestSuite/errors/err0237.pas
type
  t1=abstract class 
    procedure test; abstract;
  end;
  t2=sealed class(t1) 
    
  end;

begin

end.